crates/pyenum-derive/tests/ui/fail/struct_variant.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
pub enum Bad {
    Unit,
    Structured { inner: u8 },
}

fn main() {}
